--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
 
 main{
     background-color: #fff;
-    max-width: 80%;
+    min-width: 620px;
     padding: 15px;
     border-radius: 5px;
     box-shadow: 0 0 10px 2px;
@@ -22,13 +22,14 @@ main{
 
 .question-title{
     font-size: 1.6em;
+    text-align: center;
 }
 
 .answers-container{
     margin-top: 20px;
     margin-bottom: 10px;
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
 }
 
@@ -65,6 +66,11 @@ main{
     cursor: pointer;
     width: 60%;
     letter-spacing: 1px;
+    transition: 0.1s all linear;
+}
+
+.btn:hover{
+    transform: scale(1.1);
 }
 
 .hide{
